css/style.css
/* Globals */
body {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  line-height: 1.5;
  font-size: 16px;
  background-color: #F7F7F7;
}

#main {
  width: 90%;
  margin: auto;
}

/* Icons */
.fa, .fas, .fab {
  display: inline-block;
  width: 20px;
}

/* Active nav item */
.active {
  color: #EF8354 !important;
  font-size: 18px;
}

/* Header */
header {
  background-color: #2D3142;
  color: #F7F7F7;
  border-bottom: solid 2px #EF8354;
  margin-bottom: 25px;
  position: relative;
  overflow: hidden;
}

header > img {
  position: absolute;
  top: 3px;
  left: -2px;
}

header #title {
  padding: 4px 31px;
  z-index: 1;
  position: relative;
}

header #title h1 {
  margin: 0;
}

header #title p {
  margin: 0;
  font-size: 1.1em;
}

header #title p span {
  color: #2D3142;
}

/* Header Navigation */
header #nav-bar {
  width: 100%;
}

header #nav-bar ul {
  list-style: none;
  margin-top: 7px;
  padding: 0;
  text-align: center;
}

header #nav-bar li {
  border-top: 1px solid #BFC0C0;
  border-bottom: 1px solid #BFC0C0;
  margin-bottom: -1px;
  padding: 5px ;
  background-color: #4F5D75;
  font-size: 17px;
}

header #nav-bar a {
  color: #F7F7F7;
  text-decoration: none;
  text-align: left;
}

header #nav-bar i {
  padding-right: 15px;
}

header #nav-bar a:hover {
  color: #EF8354;
  transition: 350ms;
}

/* About */
#about h2 {
  text-align: center;
  font-size: 1.4em;
}

#about #information {
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
  text-align:center;
  padding-bottom: 20px;
  margin-bottom: 25px;
}

#about #information p {
  margin: 0;
}

#about #skills {
  text-align: center;
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
  margin-bottom: 25px;
}

#about #skills .skill img:hover {
  transform: scale(1.05);
  transition: 150ms;
}

#about #skills .skill img {
  width: 125px;
  height: auto;
}

#about #skills .skill h3 {
  margin-top: 5px;
  font-size: 1.7em;
}

#about #contact {
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
  padding-bottom: 10px;
  margin-bottom: 25px;
}

#about #contact .contact-item {
  text-align: center;
  padding: 32px 0;
}

#about #contact .contact-item a {
  border: 1px solid #4F5D75;
  padding: 20px;
  font-size: 1.1em;
  border-radius: 12px;
  background: #4F5D75;
  color: #F7F7F7;
  margin-left: 10px;
  text-decoration: none;
}

#about #contact .contact-item a:hover {
  background: #2D3142;
  color: #EF8354;
  transition: 350ms;
}

#about #contact .contact-item i {
  margin-right: 10px;
}

/* Portfolio */
#portfolio h2 {
  text-align: center;
  font-size: 1.4em;
}

#portfolio #showcase {
  margin-bottom: 25px;
  /* border: 1px solid black; */
  padding: 10px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

#portfolio #showcase .project {
 width: 300px;
 max-height: 500px;
 margin-bottom: 20px;
 border: 1px solid #F7F7F7;
 background-color: #F7F7F7;
 border-radius: 5px;
 box-shadow: 2px 1px 2px 3px #2D3142;
 padding: 7px;
 overflow: hidden;
}

#portfolio #showcase .project .img {
  width: 250px;
  height:250px;
  margin: auto;
}

#portfolio #showcase .project .img img {
  width: 100%;
  height: auto;
  border-radius: 4px;
  transition: 50ms;
}

#portfolio #showcase .project .img img:hover {
  transform: scale(1.01);
}

#portfolio #showcase .project .description h3 {
  text-align: center;
  margin: 2px auto;
}

#portfolio #showcase .project .description p {
  width: 80%;
  margin: 5px auto;
  text-align: center;
}

#portfolio #showcase .project .description a {
  display: block;
  text-align: center;
  padding: 5px;
  border-radius: 3px;
  background: #4F5D75;
  color: #F7F7F7;
  text-decoration: none;
}

#portfolio #showcase .project .description a:hover {
  background: #2D3142;
  color: #EF8354;
  transition: 350ms;
}

#portfolio #showcase .project .description i {
  margin-right: 10px;
}

/* Footer */
footer {
  background-color: #2D3142;
  color: #F7F7F7;
  padding: 5px 10px;
  border-top: solid 2px #EF8354;
}

/* Media Queries */
/* min 1024px */
@media screen and (min-width: 1024px) {
  /* Clear floats */
  .clr {
    clear: both;
  }

  /* Header */
  header #title {
    display: inline-block;
    width: 50%;
    padding-left: 35px;
    box-sizing: border-box;
  }

  header #nav-bar {
    width: 50%;
    float: right;
  }

  header #nav-bar li {
    display: inline-block;
    border: none;
    background: none;
    padding-left: 25px;
    padding-top: 22px;
  }

  header #nav-bar a {
    color: #F7F7F7;
    text-decoration: none;
    margin-left: 5px;
    text-align: left;
    border: 1px solid #BFC0C0;
    border-radius: 20px;
    padding: 10px;
  }
  
  header #nav-bar a:hover {
    color: #EF8354;
    transition: 350ms;
  }

  header #nav-bar i {
    padding-right: 5px;
  }

  /* Main, About, Skills & Contact */
  #main {
    width: 95%;
  }

  #about {
    box-sizing: border-box;
    text-align: left;
  }

  #about h2 {
    font-size: 1.4em;
    text-align: center;
  }
  
  #about #information {
    border: none;
    padding-bottom: 20px;
    margin-bottom: 25px;
    text-align: left;
    width: 45%;
    box-sizing: border-box;
    float: left;
  }

  #about #information i {
    display: block;
    margin:auto;
  }
  
  #about #skills {
    text-align: center;
    border-bottom: none;
    margin-bottom: 25px;
    margin-top: -15px;
    width: 50%;
    float: right;
    box-sizing: border-box;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
  }

  #about #skills h2 {
    display: none;
  }

  #about #skills .skill {
    display: inline-block;
    transform: scale(0.5);
    height: 120px;
    margin-top: -15px;
  }

  #about #contact {
    clear: both;
    text-align: center;
  }

  #about #contact .contact-item {
    display: inline-block;
    width: 20%;
  }
}

/* min 1440px */
@media screen and (min-width: 1440px) {
  header #nav-bar li {
    padding-left: 85px;
  }

  #about h2 {
    font-size: 1.7em;
  }

  #about #information {
    width: 35%;
    font-size: 1.1em;
    margin-left: 65px;
  }

  #about #skills {
    justify-content: space-evenly;
    width: 40%;
    margin: -5px 65px 0 0;
  }

  #about #contact .contact-item {
    width: 15%;
  }
}

